#################################################################################################################################################################
"""
    Vantle.Molten (c) 2025
    projects.vantle.org/Isolation
    connect.isolation@vantle.org
"""

module(
    name = "vantle.isolation",
    version = "1.0.0",
    bazel_compatibility = [">=7.0.0"],
)

#################################################################################################################################################################
###### Dependencies                                                                                                                              [ Dependencies ]
bazel_dep(name = "vantle", version = "1.0.0", dev_dependency = True)
