#################################################################################################################################################################
########### Import                                                                                                                                     [ Import ]
##### Internal                                                                                                                               [ Import, Internal ]
##### External                                                                                                                               [ Import, External ]
load("@rules_rust//rust:defs.bzl", "rust_library")
load("//component/web/starlark:defs.bzl", "generate")

##### Visibility                                                                                                                                       [ Module ]
package(default_visibility = ["//visibility:public"])

##### Module                                                                                                                                           [ Module ]
rust_library(
    name = "component",
    srcs = ["component.rs"],
    deps = [
        "//Molten/component:arena",
        "//Molten/component:graph",
        "//Molten/component:hypergraph",
    ],
)

rust_library(
    name = "system",
    srcs = ["system.rs"],
    deps = [
        ":component",
        "//Molten/system:arena",
        "//Molten/system:graph",
        "//Molten/system:hypergraph",
        "//Molten/system:optimize",
        "//Molten/system:query",
        "//Molten/system:scale",
        "//Molten/system:spatialize",
        "//Molten/system:translate",
    ],
)

rust_library(
    name = "module",
    srcs = ["molten.rs"],
    crate_name = "molten",
    deps = [
        ":component",
        ":system",
    ],
)

##### Documentation                                                                                                                             [ Documentation ]
generate(
    name = "readme",
    src = "molten.document.rs",
    data = [
        "//Molten/test/resource/system/graph/module/join/symbolic:data",
        "//Molten/test/resource/system/graph/module/math/numeric/logic/boolean/symbolic:data",
    ],
    destination = "Molten/index.html",
    deps = [
        "//component/web:element",
        "//system/document:vantle",
    ],
)

generate(
    name = "info",
    src = "info.document.rs",
    destination = "Molten/info.html",
    deps = [
        "//system/document:vantle",
    ],
)

generate(
    name = "notice",
    src = "notice.document.rs",
    destination = "Molten/notice.html",
    deps = [
        "//system/document:vantle",
    ],
)

generate(
    name = "license",
    src = "license.document.rs",
    destination = "Molten/license.html",
    deps = [
        "//system/document:vantle",
    ],
)
