#################################################################################################################################################################
########### Import                                                                                                                                     [ Import ]
##### Internal                                                                                                                               [ Import, Internal ]
##### External                                                                                                                               [ Import, External ]
load("@rules_rust//rust:defs.bzl", "rust_library")
load("//component/generation/starlark:defs.bzl", "extract")
load("//component/web/starlark:defs.bzl", "document")

##### Visibility                                                                                                                                       [ Module ]
package(default_visibility = ["//visibility:public"])

##### Module                                                                                                                                           [ Module ]
rust_library(
    name = "component",
    srcs = ["component.rs"],
    deps = [
        "//Molten/component:arena",
        "//Molten/component:graph",
        "//Molten/component:hypergraph",
    ],
)

rust_library(
    name = "system",
    srcs = ["system.rs"],
    deps = [
        ":component",
        "//Molten/system:arena",
        "//Molten/system:graph",
        "//Molten/system:hypergraph",
        "//Molten/system:optimize",
        "//Molten/system:query",
        "//Molten/system:scale",
        "//Molten/system:spatialize",
        "//Molten/system:translate",
    ],
)

rust_library(
    name = "module",
    srcs = ["molten.rs"],
    crate_name = "molten",
    deps = [
        ":component",
        ":system",
    ],
)

##### Documentation                                                                                                                             [ Documentation ]
document(
    src = "molten.document.rs",
    destination = "Molten/index.html",
    deps = ["//Molten/document:molten"],
)

document(
    src = "info.document.rs",
    destination = "Molten/info.html",
    deps = ["//Molten/document:info"],
)

document(
    src = "notice.document.rs",
    data = ["//:NOTICE.md"],
    destination = "Molten/notice.html",
    deps = ["//Molten/document:notice"],
)

document(
    src = "license.document.rs",
    data = ["//:LICENSE.md"],
    destination = "Molten/license.html",
    deps = ["//Molten/document:license"],
)

extract(
    name = "info.document.rule",
    language = "starlark",
    query = "(call function: (identifier) @fn (#eq? @fn \"document\")) @capture",
    source = "BUILD.bazel",
    visibility = ["//visibility:public"],
)

