#################################################################################################################################################################
########### Import                                                                                                                                     [ Import ]
##### Internal                                                                                                                               [ Import, Internal ]
##### External                                                                                                                               [ Import, External ]

##### Visibility                                                                                                                                       [ Module ]
package_group(
    name = "molten",
    packages = [
        "//Molten/...",
    ],
)

##### License                                                                                                                                         [ License ]
filegroup(
    name = "license",
    srcs = [
        "License.md",
        "Notice.md",
    ],
    visibility = ["//visibility:public"],
)
