#################################################################################################################################################################
########### Import                                                                                                                                     [ Import ]
##### Internal                                                                                                                               [ Import, Internal ]
##### External                                                                                                                               [ Import, External ]
load("@rules_rust//rust:defs.bzl", "rust_library")

##### Visibility                                                                                                                                       [ Module ]
package(default_visibility = ["//visibility:public"])

##### Module                                                                                                                                           [ Module ]
rust_library(
    name = "index",
    srcs = ["index.rs"],
    aliases = {
        "//Molten/document:index": "molten",
        "//system/generation/document:index": "generation",
        "//system/observation/document:index": "observation",
        "//system/spatialize/document:index": "spatialize",
    },
    deps = [
        "//Molten/document:index",
        "//component/web:index",
        "//system/generation/document:index",
        "//system/observation/document:index",
        "//system/spatialize/document:index",
    ],
)

#################################################################################################################################################################
########## Page                                                                                                                                           [ Page ]
rust_library(
    name = "vantle",
    srcs = ["vantle.page.rs"],
    deps = [
        "//:module.bazel.version",
        "//component/web:body",
        "//component/web:class",
        "//component/web:extraction",
        "//component/web:page",
        "//document:index",
        "//system/generation/web:navigation",
        "@crates//:miette",
    ],
)

rust_library(
    name = "info",
    srcs = ["info.page.rs"],
    deps = [
        "//component/web:body",
        "//component/web:class",
        "//component/web:page",
        "//document:index",
        "//system/generation/web:navigation",
        "@crates//:miette",
    ],
)

rust_library(
    name = "notice",
    srcs = ["notice.page.rs"],
    deps = [
        "//component/web:body",
        "//component/web:class",
        "//component/web:page",
        "//document:index",
        "//system/generation/web:navigation",
        "@crates//:miette",
    ],
)

rust_library(
    name = "license",
    srcs = ["license.page.rs"],
    deps = [
        "//component/web:body",
        "//component/web:class",
        "//component/web:page",
        "//document:index",
        "//system/generation/web:navigation",
        "@crates//:miette",
    ],
)

rust_library(
    name = "module",
    srcs = ["module.page.rs"],
    deps = [
        "//:module.source",
        "//component/web:body",
        "//component/web:class",
        "//component/web:extraction",
        "//component/web:page",
        "//document:index",
        "//system/generation/web:navigation",
        "@crates//:miette",
    ],
)
