#################################################################################################################################################################
########### Import                                                                                                                                     [ Import ]
##### Internal                                                                                                                               [ Import, Internal ]
##### External                                                                                                                               [ Import, External ]
load("@rules_rust//rust:defs.bzl", "rust_test")

##### Visibility                                                                                                                                       [ Module ]
package(default_visibility = ["//visibility:private"])

##### Module                                                                                                                                           [ Module ]
rust_test(
    name = "rust",
    size = "small",
    srcs = ["rust.rs"],
    deps = [
        "//:module",
    ],
)

##### Documentation                                                                                                                             [ Documentation ]
