#################################################################################################################################################################
########### Import                                                                                                                                     [ Import ]
##### Internal                                                                                                                               [ Import, Internal ]
##### External                                                                                                                               [ Import, External ]
load("//component/generation/starlark:defs.bzl", "extract")
load("//component/web/starlark:defs.bzl", "copy")

##### Visibility                                                                                                                                       [ Module ]
package(default_visibility = ["//visibility:public"])

##### Module                                                                                                                                           [ Module ]
filegroup(
    name = "logos",
    srcs = [
        "favicon.ico",
        "logo.png",
    ],
)

copy(
    name = "favicon.copy",
    src = "favicon.ico",
    path = "resource/favicon.ico",
)

copy(
    name = "logo.copy",
    src = "logo.png",
    path = "resource/logo.png",
)

extract(
    name = "copy.rule",
    language = "starlark",
    query = "(call function: (identifier) @fn (#eq? @fn \"copy\")) @capture",
    source = "BUILD.bazel",
    visibility = ["//visibility:public"],
)

##### Documentation                                                                                                                             [ Documentation ]
